--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Bash</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h3 class="nav-title">G-3 Architects</h3>
+            <ul>
+                <li><a href="">HOME</a></li>
+                <li><a href="">ABOUT</a></li>
+                <li><a href="">CONTACT</a></li>
+                <li><a href="">LOGIN</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-contant">
+                <h1 class="banner-title">Brand New Grouph Of Architects</h1>
+            <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa aliquam at porro alias beatae a, sunt provident sit obcaecati voluptates!</p>
+            <button class="btn-primary">Explore More</button>
+            </div>
+            <img src="images/banner.png" alt="">
+        </div>
+    </header>
 </body>
 </html>
