--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- header start -->
     <header>
         <nav>
             <h3 class="nav-title">G-3 Architects</h3>
@@ -26,5 +27,104 @@
             <img src="images/banner.png" alt="">
         </div>
     </header>
+    <!-- header end -->
+     <!-- main start -->
+      <main>
+        <!-- teams section -->
+         <section class="teams-container">
+            <div class="teams-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="teams-contant">
+                <h3 class="teams-title"><span class="quick-list">Quick list</span> <span>of Our</span> <span class="text-features">Features</span></h3>
+                <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat aliquid sunt minus eius quo perspiciatis repudiandae quisquam error tenetur fugit?</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+         </section>
+
+      <!-- main end -->
+
+
+
+       <!-- features section -->
+        <section class="features">
+            <div class="features-contant">
+                <h3 class="nav-title">Features you will <br>    love & enjoy</h3>
+                <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta harum soluta aut corporis exercitationem reprehenderit, maxime saepe ex voluptate consectetur.</p>
+                
+                <div class="card2">
+                    <h4>Desktop & Mobile Version</h4>
+                    <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo delectus quas, ipsum non suscipit, mollitia, asperiores fugit a soluta perspiciatis veritatis possimus omnis dolorem. Cumque iure ratione tempora numquam voluptatum.</p>
+                </div>
+                <div class="card2">
+                    <h4>Drug & Drop builder</h4>
+                    <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo delectus quas, ipsum non suscipit, mollitia, asperiores fugit a soluta perspiciatis veritatis possimus omnis dolorem. Cumque iure ratione tempora numquam voluptatum.</p>
+                </div>
+                <div class="card2">
+                    <h4>Awesome Modern Design</h4>
+                    <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo delectus quas, ipsum non suscipit, mollitia, asperiores fugit a soluta perspiciatis veritatis possimus omnis dolorem. Cumque iure ratione tempora numquam voluptatum.</p>
+                </div>
+                <div class="card2">
+                    <h4>Easy to edit</h4>
+                    <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo delectus quas, ipsum non suscipit, mollitia, asperiores fugit a soluta perspiciatis veritatis possimus omnis dolorem. Cumque iure ratione tempora numquam voluptatum.</p>
+                </div>
+                </div>
+            <div class="features-img">
+                <img src="images/architect.png" alt="">
+                <div class="ten-years-badges">
+                    <h2>10+ Years</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
+        </section>
+
+
+
+        <!-- facts section -->
+         <section class="facts">
+            <h3 class="nav-title">Some Facts</h3>
+            <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae beatae rem reprehenderit illo dolore aut ratione suscipit corrupti nemo neque!</p>
+            <div class="facts-card-container">
+                <!-- .card*4>img+h2.card-stats+p.card-title -->
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card-stats">54</h2>
+                    <p class="card-title">Awards Winning</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card-stats">1458</h2>
+                    <p class="card-title">Projects Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card-stats">590</h2>
+                    <p class="card-title">Cliants Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card-stats">22350</h2>
+                    <p class="card-title">Email Send</p>
+                </div>
+            </div>
+         </section>
+         <section class="sponsors">
+            <h3 class="nav-title">Our Sponsors</h3>
+            <p class="banner-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae laudantium reprehenderit a laborum ut accusamus!</p>
+            <div class="sponsors-img-container">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+         </section>
+         <footer>
+            <p class="banner-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem perspiciatis delectus laborum atque quae culpa voluptatibus voluptatem omnis aspernatur veniam.</p>
+         </footer>
+        </main>
 </body>
 </html>
